--- a/src/components/Treatments/Treatments.css
+++ b/src/components/Treatments/Treatments.css
@@ -1,6 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900|Roboto:400,500,700,900&display=swap');
+/**
+ * Custom Properties
+ * aka CSS variables.
+ *
+ * @link: https://developer.mozilla.org/en-US/docs/Web/CSS/--*
+ **/
 
-:root {
+ :root {
 	/* COLORS */
 	--primary-lightest: hsl(341, 32%, 87%);
 	--primary-lighter: hsl(341, 32%, 57%);
@@ -43,13 +48,50 @@
  @custom-media --mobile screen and (max-width: 700px);
  @custom-media --desktop screen and (min-width: 1000px);
  
+
+/* TREATMENTS */
+
+.treatments>div{
+  background-size: 100%;
+  background-position: top;
+}
+
+#treatments h3,
+#treatments p {
+	z-index: 999;
+}
+
+.treatments-list {
+	display: grid;
+	grid-template-columns: 1fr;
+	font-size: 1.5em;
+	& ul {
+		padding: 0;
+		margin: 0;
+		list-style-type: none;
+		text-align: center;
+		& li {
+			padding: 0.25em 0;
+		}
+	}
+}
+
+@media (--desktop) {
+	.treatments-list {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+.parallax-inner{
+  z-index: -9999;
+}
+
+.parallax-inner>div{
+  background-size:  contain !important;
+}
+
 section {
 	padding: 0 3em 3em;
 	border-top: 1px solid var(--primary-color);
-}
-
-#hero-unit{
-  padding: 0;
 }
 
 @media (--mobile) {
@@ -63,62 +105,4 @@ section {
 .section-header {
 	text-align: center;
 	padding: 2.5em 0;
-}
-
-#hero-unit .section-header {
-	color: white;
-	text-shadow: 2px 3px 4px #000;
-}
-
-/*--------------------------------------------------------------
-# Typography
---------------------------------------------------------------*/
-
-body,
-button,
-input,
-select,
-optgroup,
-textarea {
-	color: var(--primary-dark);
-	font-family: var(--primary-font-family);
-	font-size: var(--base-font-size);
-	line-height: 1.4;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	margin-bottom: 0.25em;
-	line-height: 1;
-}
-h1 {
-	font-family: var(--secondary-font-family);
-	font-size: calc(var(--base-font-size) * 3);
-	font-weight: 700;
-}
-h2 {
-	font-family: var(--primary-font-family);
-	font-size: calc(var(--base-font-size) * 1.5);
-	font-weight: 600;
-}
-h3 {
-	font-family: var(--primary-font-family);
-	font-size: calc(var(--base-font-size) * 2);
-	font-weight: 500;
-}
-h4 {
-	font-family: var(--primary-font-family);
-	font-size: calc(var(--base-font-size) * 2);
-	font-weight: 500;
-	letter-spacing: -0.05em;
-	/* text-transform: uppercase; */
-}
-h5 {
-	font-family: var(--secondary-font-family);
-	font-size: calc(var(--base-font-size) * 1.35);
-	font-weight: 500;
 }
