--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -53,7 +53,7 @@
 /* REVIEWS */
 
 #reviews {
-	background: url('https://northfloridachiropracticphysicaltherapy.com/wp-content/themes/orlandochiro/assets/images/texture.svg');
+	background: url('../../images/texture.svg');
 }
 #reviews-container {
 	display: grid;
