--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -104,7 +104,8 @@
 
 .review-link {
 	color: #136aaf;
-	text-decoration: underline;
+  text-decoration: underline;
+  border: none;
 }
 
 .review-meta {
