--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,30 +1,30 @@
 :root {
-	/* COLORS */
-	--primary-lightest: hsl(341, 32%, 87%);
-	--primary-lighter: hsl(341, 32%, 57%);
-	--primary-light: hsl(341, 32%, 37%);
-	--primary-color: hsl(341, 32%, 27%);
-	--primary-dark: hsl(341, 33%, 17%);
-	--primary-darker: hsl(344, 31%, 7%);
-	--primary-gradient: linear-gradient(
-		to bottom,
-		hsl(341, 32%, 97%) 0%,
-		hsl(341, 32%, 93%) 25%,
-		hsl(344, 31%, 90%) 100%
-	);
+  /* COLORS */
+  --primary-lightest: hsl(341, 32%, 87%);
+  --primary-lighter: hsl(341, 32%, 57%);
+  --primary-light: hsl(341, 32%, 37%);
+  --primary-color: hsl(341, 32%, 27%);
+  --primary-dark: hsl(341, 33%, 17%);
+  --primary-darker: hsl(344, 31%, 7%);
+  --primary-gradient: linear-gradient(
+    to bottom,
+    hsl(341, 32%, 97%) 0%,
+    hsl(341, 32%, 93%) 25%,
+    hsl(344, 31%, 90%) 100%
+  );
 
-	--light-theme-color: #fff;
+  --light-theme-color: #fff;
 
-	/* FONTS */
-	--primary-font-family: 'Raleway', sans-serif;
-	--secondary-font-family: 'Roboto Condensed', 'Helvetica Neue',
-		'Arial Narrow', sans-serif;
-	--base-font-size: 18px;
-	--base-line-height: 1.4;
+  /* FONTS */
+  --primary-font-family: "Raleway", sans-serif;
+  --secondary-font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial,
+    "Noto Sans", sans-serif;
+  --base-font-size: 18px;
+  --base-line-height: 1.4;
 
-	/* OTHERS */
-	--content-width: 45rem;
-	--dropdown-symbol-width: 0.9em;
+  /* OTHERS */
+  --content-width: 45rem;
+  --dropdown-symbol-width: 0.9em;
 }
 
 /**
@@ -34,20 +34,19 @@
  * @link: https://drafts.csswg.org/mediaqueries-5/#custom-mq
  **/
 
- @custom-media --narrow-menu-query screen and (max-width: 699px);
- @custom-media --wide-menu-query screen and (min-width: 700px);
- @custom-media --content-query screen and (min-width: 48em);
- @custom-media --sidebar-query screen and (min-width: 60em);
- @custom-media --mobile screen and (max-width: 700px);
- @custom-media --desktop screen and (min-width: 1000px);
- 
- 
- .site-header {
+@custom-media --narrow-menu-query screen and (max-width: 699px);
+@custom-media --wide-menu-query screen and (min-width: 700px);
+@custom-media --content-query screen and (min-width: 48em);
+@custom-media --sidebar-query screen and (min-width: 60em);
+@custom-media --mobile screen and (max-width: 700px);
+@custom-media --desktop screen and (min-width: 1000px);
+
+.site-header {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: stretch;
   border-bottom: 1px solid #000;
-  padding: .5em 3em .5em;
+  padding: 0.5em 3em 0.5em;
 }
 
 /************************************
@@ -108,7 +107,8 @@ Main Menu
   display: none;
 }
 
-.top_bar i {
+.top_bar i,
+.top_bar svg {
   position: absolute;
   font-size: 1.5em;
   color: var(--light-theme-color);
