--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,20 +2,23 @@
 
 :root {
   /* COLORS */
-  --primary-lightest: hsl(341, 32%, 87%);
-  --primary-lighter: hsl(341, 32%, 57%);
-  --primary-light: hsl(341, 32%, 37%);
-  --primary-color: hsl(341, 32%, 27%);
-  --primary-dark: hsl(341, 33%, 17%);
-  --primary-darker: hsl(344, 31%, 7%);
+  --primary-opacity-dark:hsla(0, 0%, 0%, 0.5);
+  --primary-opacity-light:hsla(348, 24%, 92%, 0.5);
+  
+  --theme-color-white: #ffffff;
+
+  --primary-light: hsl(211, 54%, 28%);
+  --primary-color: hsl(211, 54%, 18%);
+  --primary-dark: hsl(210, 55%, 8%);
+
   --primary-gradient: linear-gradient(
     to bottom,
-    hsl(341, 32%, 97%) 0%,
-    hsl(341, 32%, 93%) 25%,
-    hsl(344, 31%, 90%) 100%
+    hsl(240, 33%, 97%) 0%,
+    hsl(245, 33%, 93%) 25%,
+    hsl(240, 29%, 90%) 100%
   );
 
-  --light-theme-color: #fff;
+  
 
   /* FONTS */
   --primary-font-family: "Raleway", sans-serif;
@@ -76,7 +79,7 @@ section {
 
 #hero-unit .section-header {
   color: white;
-  text-shadow: 2px 3px 4px #000;
+  text-shadow: 2px 3px 4px black;
 }
 
 a,
@@ -150,4 +153,580 @@ h5 {
 }
 @font-face {
   font-display: swap;
+}
+
+
+
+/* HEADER */
+
+.site-header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: stretch;
+  padding: 0.5em 3em 0.5em;
+}
+
+/************************************
+Main Menu
+ ***********************************/
+.navbar-nav a {
+  font-family: Raleway, sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: var(--primary-color) !important;
+}
+.navbar {
+  position: absolute !important;
+  z-index: 999;
+  right: 20px;
+}
+/*
+	Top Bar
+--------------------------------------------------------------*/
+
+.top_bar {
+  font-family: var(--secondary-font-family);
+  width: 100%;
+  background-color: var(--primary-color);
+  margin: 0;
+  display: none;
+  grid-template-columns: repeat(3, 1fr) 1fr;
+  justify-content: flex-start;
+  line-height: 0.8em;
+}
+
+.top_bar a {
+  text-decoration: none;
+}
+
+.ph2_info {
+  position: relative;
+  padding: 5px 0 6px 15px;
+  border-right: 1px solid var(--primary-opacity-light);
+  border-top: 3px solid transparent;
+  transition: all 0.25s;
+}
+
+.ph2_info:hover {
+  border-top: 3px solid var(--theme-color-white);
+}
+
+.ph2_info::after {
+  position: absolute;
+  content: "";
+  top: 2%;
+  right: 15px;
+  width: 1px;
+  height: 96%;
+}
+
+.ph2_info:last-child::after {
+  display: none;
+}
+
+.top_bar i,
+.top_bar svg {
+  position: absolute;
+  font-size: 1.5em;
+  color: var(--theme-color-white);
+}
+
+.ph2_info strong,
+.ph2_info span {
+  display: block;
+  padding-left: 2.25rem;
+}
+
+.ph2_info strong {
+  font-size: 0.8em;
+  color: var(--theme-color-white);
+  font-weight: 600;
+}
+
+.ph2_info span {
+  font-size: 0.7em;
+  color: var(--theme-color-white);
+  transition: all 0.25s;
+}
+
+@media (--desktop) {
+  .top_bar {
+    display: grid;
+  }
+}
+
+
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+
+.site-footer {
+  border-top: 1px solid black;
+  font-family: var(--secondary-font-family);
+  & a {
+    color: white;
+  }
+}
+.site-info {
+  border-top: 1px solid var(--theme-color-white);
+  text-align: right;
+  padding: 0.25em 1em;
+  font-size: calc(var(--base-font-size) / 1.5);
+}
+/*
+	Footer 1
+-------------------------------------------------------*/
+.cta {
+  font-size: calc(var(--base-font-size) * 0.9);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  & a {
+    text-decoration: none;
+    & .linkarea {
+      border-bottom: 1px solid var(--theme-color-white);
+      position: relative;
+      padding: 1em 0 1em 1em;
+      cursor: pointer;
+      -webkit-transition: all 0.5s;
+      transition: all 0.5s;
+      border-right: 1px solid var(--theme-color-white);
+      & strong {
+        margin-top: 5px;
+        padding-left: 1.6em;
+        letter-spacing: 3px;
+      }
+      & span {
+        font-weight: 300;
+        display: block;
+        & .fa {
+          margin-right: 5px;
+        }
+      }
+    }
+    & .linkarea:hover {
+      background-color: var(--theme-color-white);
+      color: var(--primary-color);
+    }
+  }
+}
+@media (--desktop) {
+  .cta {
+    font-size: 1.5em;
+  }
+}
+@media (--mobile) {
+  .cta {
+    font-size: 1.5em;
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .cta a .linkarea {
+    border-right: none;
+    padding-left: 0;
+    margin-left: -1em;
+  }
+}
+/*--------------------------------------------------------------
+# Footer Widgets
+--------------------------------------------------------------*/
+
+.footer_widgets-area {
+  font-size: calc(var(--base-font-size) / 1.25);
+  font-family: var(--secondary-font-family);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1em;
+}
+
+.footer_widgets-area .widget {
+  border-bottom: 1px solid var(--theme-color-white);
+  padding: 2em 0 2em 2em;
+}
+
+@media (--mobile) {
+  .footer_widgets-area .widget {
+    padding: 2em 0;
+  }
+}
+
+.site-footer {
+  background: var(--primary-dark);
+  color: var(--theme-color-white);
+}
+.site-footer ul {
+  list-style: none;
+  padding-left: 0;
+}
+.footer_widgets-area section:nth-of-type(2n) ul li {
+  padding: 0.25em 0;
+}
+
+.site-footer ul li a {
+  text-decoration: none;
+}
+
+.site-footer .svg-inline--fa {
+  margin-right: 0.25em;
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+}
+
+#custom_html-2 svg {
+  font-size: 2.5em;
+  padding: 0;
+  margin: 0 0.3em 0 0;
+}
+
+.linkarea svg {
+  margin-right: 0.5em;
+}
+
+@media (--mobile) {
+  .footer_widgets-area {
+    grid-template-columns: repeat(1, 1fr);
+    text-align: center;
+  }
+}
+
+
+/* TREATMENTS */
+
+.treatments > div {
+  background-size: 100%;
+  background-position: top;
+}
+
+#treatments h3,
+#treatments p {
+  z-index: 999;
+}
+
+.treatments-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  font-size: 1.5em;
+
+  & ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    text-align: center;
+
+    & li {
+      padding: 0.25em 0;
+    }
+  }
+}
+
+@media (--desktop) {
+  .treatments-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.parallax-inner {
+  z-index: -9999;
+}
+
+.parallax-inner > div {
+  background-size: contain !important;
+}
+
+section {
+  padding: 0 3em 3em;
+  border-top: 1px solid var(--primary-color);
+}
+
+@media (--mobile) {
+  .parallax-inner > div {
+    background-size: 200vh !important;
+  }
+  .parallax-inner,
+  .parallax-outer {
+    position: absolute !important;
+  }
+
+  section {
+    padding: 0 0.35em 3em;
+
+    & h1 {
+      font-size: 2.2em;
+    }
+  }
+}
+
+.section-header {
+  text-align: center;
+  padding: 2.5em 0;
+}
+
+
+/*--------------------------------------------------------------
+# PRICING
+--------------------------------------------------------------*/
+#pricing-plans {
+  /* background: var(--primary-gradient); */
+  /* border-top: 80px solid hsla(0, 0%, 0%, 0.1);
+	border-bottom: 80px solid hsla(0, 0%, 0%, 0.5); */
+}
+.plans-wrap {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1.5em;
+  font-size: 1.25em;
+}
+
+.plan,
+.plans {
+  transition: all 0.25s;
+  border: 1px solid transparent;
+}
+
+@media (--mobile) {
+  .plan .right {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+.plans {
+  border: 1px solid var(--primary-dark);
+  padding: 1em;
+  background: hsl(0, 0%, 99%);
+  box-shadow: var(--primary-dark) 0 2px 6px;
+
+  & h4 {
+    line-height: 1em;
+    text-align: center;
+    margin: 0 0 0.5em 0;
+  }
+}
+
+.plan {
+  text-align: center;
+  transition: all 0.25s ease;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0.3em;
+  margin: 1em 0.5em;
+  box-shadow: 0 0 0;
+  border: 1px solid hsla(0, 0%, 20%, 0.5);
+  border-radius: 2px;
+  & span {
+    display: block;
+  }
+}
+/* 
+.plan:hover {
+  border: 1px solid black;
+}
+
+.plan:nth-child(1n) {
+  background: hsla(341, 32%, 27%, 0.15);
+}
+.plan:nth-child(2n) {
+  background: hsla(341, 32%, 27%, 0.25);
+} */
+
+.sticker-wrap {
+  font-size: 0.55em;
+  height: 5.5em;
+  width: 5.5em;
+  position: relative;
+  margin: 0 1em;
+}
+
+.sticker-stroke {
+  background: #fff;
+  height: 6.1em;
+  width: 6.1em;
+  border-radius: 90%;
+  position: absolute;
+  top: -0.3em;
+  left: -0.3em;
+  z-index: 1;
+}
+
+.sticker {
+  height: 5.5em;
+  width: 5.5em;
+  border-radius: 90%;
+  text-align: center;
+  position: absolute;
+  z-index: 5;
+  background: var(--primary-dark);
+}
+
+.save {
+  font-weight: 700;
+  color: #fff;
+  font-size: 1.7em;
+  position: relative;
+  top: 0.85em;
+  line-height: 0.85em;
+}
+
+.strike {
+  text-decoration: line-through;
+  font-weight: 400;
+}
+
+.new-price {
+  font-weight: 700;
+}
+.plan-length {
+  font-size: calc(var(--base-font-size) / 1.5);
+  text-align: center;
+  vertical-align: text-top;
+  white-space: nowrap;
+}
+
+@media (--desktop) {
+  .plans-wrap {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (--mobile) {
+  .plans-wrap {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+ /* REVIEWS */
+
+ #reviews {
+  background: url("../images/texture.svg");
+}
+#reviews-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1em;
+  margin: 1em;
+}
+@media (--mobile) {
+  #reviews-container {
+    grid-template-columns: 1fr;
+  }
+}
+@media (--desktop) {
+  #reviews-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.review-container {
+  display: grid;
+  background: #fff;
+  grid-template-columns: 2fr 6fr;
+  border: 1px solid #777;
+  padding: 1em;
+  line-height: 1.4em;
+}
+.review-details {
+  background: #fafafa;
+  border-radius: 4px;
+  margin: 2px;
+  font-family: var(--secondary-font-family);
+  font-size: 15px;
+  color: #777;
+  position: relative;
+  line-height: 1.2em;
+  font-weight: 300;
+}
+
+.review-rating {
+  float: left;
+  padding-right: 0.5em;
+}
+.rating-star:before {
+  content: "\2605";
+  font-size: 16px;
+  line-height: 16px;
+  color: rgb(231, 113, 27);
+}
+
+.review-link {
+  color: #136aaf;
+  text-decoration: underline;
+  border: none;
+  font-size: 1em;
+}
+
+.review-meta {
+  justify-self: center;
+}
+.profile-photo {
+  display: block;
+  width: 85px;
+  height: auto;
+  padding: 0 0.5em 0 0;
+}
+.author-name {
+  color: #427fed;
+  font-weight: bold;
+  line-height: 1em;
+  padding-bottom: 0.25em;
+}
+.review-date {
+  padding-bottom: 0.25em;
+}
+
+ 
+ /*--------------------------------------------------------------
+# SERVICES
+--------------------------------------------------------------*/
+
+#services {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 1.5em;
+	padding-top: 2em;
+	text-align: center;
+}
+
+.service a {
+	text-decoration: none;
+	color: var(--primary-dark);
+	& .service-icon {
+		font-size: 5em;
+		transition: all 0.25s;
+		color: var(--primary-color);
+	}
+	& .service-icon:hover {
+		font-size: 5.2em;
+		color: var(--primary-light);
+	}
+	& h2 {
+		color: var(--primary-color);
+	}
+	& p {
+		color: var(--primary-light);
+	}
+}
+
+@media (--desktop) {
+	#services {
+		grid-template-columns: repeat(4, 1fr);
+  }
+  .parallax>div{
+    background-size: 100%;
+  }
+}
+.parallax>div{
+  background-size: cover;
+  background-position: top;
+}
+@media (--mobile) {
+	#services {
+		grid-template-columns: 1fr;
+  }
+  .parallax>div{
+    background-size: cover;
+    background-position: top;
+  }
 }
