--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -1,4 +1,4 @@
-.testimonials ul{
+/* .testimonials ul{
   background: red;
   min-height: 350px;
   width: 1160px;
@@ -16,4 +16,4 @@
   width: 280px;
   height: 315px;
 }
-
+ */
